--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<img src="icons/NightCorp.png" alt="Night City">
 						<span>NIGHT CITY</span>
 					</a>
-					<a href="pages/tt-international.html"  class="app-icon" data-app="tt-international">
-						<img src="" alt="Trauma Team International">
+					<a href="pages/traumateam.html"  class="app-icon" data-app="tt-international">
+						<img src="icons/TraumaTeam.png" alt="Trauma Team International">
 						<span>TRAUMA TEAM INTERNATIONAL</span>
 					</a>
 					<a href="pages/nc-inquirer.html"  class="app-icon" data-app="nc-inquirer">
