--- a/pages/nightcity.html
+++ b/pages/nightcity.html
@@ -43,16 +43,16 @@
 							<span class="official-guide">Oficjalna strona internetowa</span>
 							<span class="city-of-dreams">Night City – Miasta Marzeń</span>
 						</div>
-						<div>
-							<img src="../icons/NightCorp.png" height="75" width="90" alt="NC Logo" class="nc-logo">
+						<div class="nc-header-right">
+							<img src="../icons/NightCorp.png" height="75" alt="NC Logo" class="nc-logo">
 						</div>
 					</div>
-					<div class="nc-body-bookmark">
-						<div class="nc-body-head">
+					<div class="nc-bookmark">
+						<div class="nc-bookmark-label">
 							<span>HISTORIA</span>
 						</div>
 					</div>
-					<div class="nc-body-intro">
+					<div class="nc-body">
 						<h1 class="nc-body-head-title">Historia Night City rozpoczyna się od marzenia jednego człowieka: przedsiębiorcy i wizjonera, Richarda Nighta. Pod koniec XX wieku Night zamarzył o stworzeniu miasta przyszłości, nieskalanego starymi ideami i wolnego od krępujących praw.</h1>
 					</div>
 					<div class="nc-body">
@@ -66,12 +66,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="nc-body-bookmark">
-						<div class="nc-body-head">
+					<div class="nc-bookmark">
+						<div class="nc-bookmark-label">
 							<span>NIEBEZPIECZEŃSTWO</span>
 						</div>
 					</div>
-					<div class="nc-body-intro">
+					<div class="nc-body">
 						<h1 class="nc-body-head-title">Pobyt w Night City to ciągłe wyzwanie dla każdego, a my, jako miasto, jesteśmy zobowiązani do zapewnienia Ci bezpieczeństwa. Pamiętaj, że zawsze powinieneś zachować ostrożność, gdyż niebezpieczeństwo może czaić się za każdym rogiem.</h1>
 					</div>
 					<div class="nc-body">
