--- a/pages/traumateam.html
+++ b/pages/traumateam.html
@@ -359,7 +359,7 @@
 						</div>
 						<div class="notes-box">
 							<p>
-								Jeżeli podczas wykonywania rzucu na Death Save Postać odniesie porażkę, umiera.
+								Jeżeli podczas wykonywania rzutu na Death Save Postać odniesie porażkę, umiera.
 							</p>
 							<p>
 								I stamtąd już nie ma powrotu.
@@ -374,6 +374,12 @@
 						</div>
 					</div>
 					<section class="tt-section">
+						<div class="tt-section-header">
+							<h2>Stabilizacja i leczenie</h2>
+							<p>
+								Zakładając, że Postać nie zakończyła swojego życia, będzie chciała jak najszybciej wrócić na ulicę. Aby rozpocząć proces naturalnego leczenia, stan Postaci musi zostać wcześniej ustabilizowany. 
+							</p>							
+						</div>
 						<div class="notes-box">
 							<p>
 								DV Stabilizacji celu zależy od jego Klasyfikacji Obrażeń:
@@ -387,18 +393,155 @@
 								Stabilizacja to Akcja i wymaga rzutu: <b>TECH + Pierwsza Pomoc</b>/<b>Ratownik + 1d10.</b>
 							</p>
 						</div>
+						<div class="tt-section-header">
+							<p>
+								Po udanej stabilizacji, Postać będzie odzyskiwać HP równe swojemy BODY, za każde 24 godziny, które Postać przeznaczy na odpoczynek. Pasywne leczenie nie będzie przerwane jeżeli Postać będzie podejmować się lekkich prac. W przeciwnym przypadku, jeżeli Postać nie będzie odpoczywać, na koniec dnia może nie odzyskać punktów HP, a w ekstremalnych przypadkach może wymagać ponownego ustabilizowania.
+							</p>
+							<p>
+								Ustabilizowana Postać, która wcześniej odniosła śmiertelne obrażenia, jest automatycznie leczona do 1HP i staje się nieprzytomna. Utrata przytomności zawsze trwa minutę. Jeżeli nieprzytomna Postać zostanie zaatakowana i zakwalifikuje się do Śmiertelnych Obrażeń nadal musi rzucać na Death Save.
+							</p>
+							<p class="tt-section-subtitle">
+								Istnieją cztery umiejętności związane z leczeniem: <b>Cybertech</b>, <b>Pierwsza pomoc</b>, <b>Ratownik (x2)</b> i <b>Chirurgia</b>.
+							</p>
+						</div>
+						<div class="tt-section-table-container">
+							<table >
+								<thead>
+									<tr>
+										<th class="header-cell">Umiejętnosć</th>
+										<th class="header-cell">Efekt</th>
+										<th class="header-cell">Uwagi</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">
+											<div>Cybertech</div>
+										</td>
+										<td class="secondary-cell">Nie umożliwia stabilizacji.</td>
+										<td class="secondary-cell">Może zostać użyta do Szybkiego opatrunku i leczenia Urazów elementów cybernetycznych, które zastąpiły mięso.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Pierwsza pomoc</div>
+										</td>
+										<td class="secondary-cell">Umożliwia stabilizację i Szybki opatrunek prostych urazów.</td>
+										<td class="secondary-cell">Dostępna dla każdej Postaci z minimalną inwestycją punktową, ponieważ każda Postać ma co najmniej 2 punkty w tej umiejętności.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Ratownik (x2)</div>
+										</td>
+										<td class="secondary-cell">Umożliwia stabilizację, Szybki opatrunek oraz leczenie wiekszosci Urazów.</td>
+										<td class="secondary-cell">Dostępna dla każdej postaci, ale koszt levelowania jest dwukrotnie większy.</td>
+									</tr>
+									<tr>
+										<td class="main-cell">
+											<div>Chirurgia</div>
+										</td>
+										<td class="secondary-cell">Umożliwia  leczenie nawet najcięższych Urazów.</td>
+										<td class="secondary-cell">Dostępna tylko dla klasy Medtech poprzez umiejętność specjalną: Medycyna.</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="tt-section-header">
+							<p>
+								Krytycznymi obrażeniami można zająć się na dwa sposoby: poprzez Szybki Opatrunek oraz Leczenie. W zależności jak poważny jest uraz, niektóre sposoby mogą nie być dostępne. 
+							</p>
+						</div>
+						<div class="notes-box">
+							<p>
+								Szybki opatrunek usunie efekt urazu na 24 godziny.
+							</p>
+							<p>
+								Każda próba zajmuje minutę. Postać może założyć Szybki opatrunek na siebie.
+							</p>
+							<p>
+								Leczenie usunie uraz na stałe.
+							</p>
+							<p>
+								Każda próba zajmuje 4 godziny. Postać nie może uleczyć siebie.
+							</p>
+						</div>
+						<div class="tt-section-header">
+							<p>
+								Jeżeli mięsne kończyny są zastąpione wszczepami Postać nadal ponosi wszystkie efekty Urazów. Szybki opatrunek oraz Leczenie może zostać wykonane z użyciem umiejętności Cybertech. DV i czas przeprowadzenia czynności pozostaje taki sam.
+							</p>
+						</div>
+
 					</section>
+					
 					<div class="tt-bookmark">
 						<div class="tt-bookmark-label">
 							<span>PAKIETY</span>
 						</div>
 					</div>
+					<section class="tt-section">
+						<div class="product-card-container">
+							<div class="product-card">
+								<div class="product-header">
+									<h3>Silver</h3>
+								</div>
+								<div class="product-price">
+									<span>500,00 €$/mies.</span>
+									<p class="tax-info">w tym VAT. Plan roczny rozliczany co miesiąc</p>
+								</div>
+								<div class="product-description">
+									<p>Ekstrakcja z miejsca zdarzenia, stabilizacja stanu pacjenta i transport do najbliższej placówki medycznej. Zabiegi chirurgiczne są dodatkowo płatne.</p>
+									<p>Po otrzymaniu zgłoszenia, na miejsce zdarzenia kierowana jest najblizsza wolna jednostka.</p>
+									<p>Usługa obejmuje teren Night City. W strefach wysokiego ryzyka wymagana jest dodatkowa opłata.</p>
+								</div>
+								<div class="product-actions">
+									<div class="security-info">
+										<div><i class="fas fa-lock"></i> Bezpieczna transakcja</div>
+									</div>
+									<button class="buy-button">Kup teraz</button>
+								</div>
+							</div>
+							<div class="product-card">
+								<div class="product-header">
+									<h3>Executive</h3>
+								</div>
+								<div class="product-price">
+									<span>1000,00 €$/mies.</span>
+									<p class="tax-info">w tym VAT. Plan roczny rozliczany co miesiąc</p>
+								</div>
+								<div class="product-description">
+									<p>Ekstrakcja z miejsca zdarzenia, stabilizacja stanu pacjenta i transport do wybranej placówki medycznej. Zabiegi chirurgiczne są nieodpłatne.</p>
+									<p>Zgłoszenie traktowane jest priorytetowo, na miejsce zdarzenia kierowana jest najblizsza jednostka.</p>
+									<p>Usługa obejmuje teren Night City bez względu na strefę ryzyka.</p>
+								</div>
+								<div class="product-actions">
+									<div class="security-info">
+										<div><i class="fas fa-lock"></i> Bezpieczna transakcja</div>
+									</div>
+									<button class="buy-button">Kup teraz</button>
+								</div>
+							</div>
+						</div>
+						<div class="tt-section-header">
+							<p>
+								Oba pakiety można transferować na zasadzie 1:1, to znaczy, że Postać może użyć swojego pakietu na użytek kogoś innego, zakładając, że Postać nie użyła pakietu na sobie. Pakiet nie może zostać wykorzystany na kilka osób. 
+							</p>
+							<p>
+								Zapisanie Karty Trauma Team na swoim Wirtualnym Asystencie, który jest połączony z biomonitorem, pozwoli Asystentowi na automatyczne wezwanie Ambulansu Trauma Team bez zużywania Akcji. Wezwanie następuje kiedy HP jest niższe niż BODY, albo kiedy Postać utraci część ciała.
+							</p>
+							<h2>Nasza flota</h2>
+							<img class="obraz" src="../icons/tt-squad.png">
+							<p>
+								Zakładając, że Postać nie zakończyła swojego życia, będzie chciała jak najszybciej wrócić na ulicę. Aby rozpocząć proces naturalnego leczenia, stan Postaci musi zostać wcześniej ustabilizowany. 
+							</p>							
+						</div>
+					</section>
 					<div class="tt-bookmark">
 						<div class="tt-bookmark-label">
 							<span>KONTAKT</span>
 						</div>
 					</div>
-					
+					<section class="tt-section">
+						884
+					</section>
 				</div>
 				<!-- 
 				Koniec podstrony: -->
