--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 						<span>KOLEKTYW BARTMOSSA</span>
 					</a>
 					<a href="pages/news-54.html"  class="app-icon" data-app="news-54">
-						<img src="" alt="News 54">
-						<span>NEWS 54</span>
+						<img src="" alt="Night City Today">
+						<span>NIGHT CITY TODAY</span>
 					</a>
 					<a href="pages/autofixer.html"  class="app-icon" data-app="autofixer">
 						<img src="" alt="Autofixer">
