--- a/pages/traumateam.html
+++ b/pages/traumateam.html
@@ -530,8 +530,199 @@
 							<h2>Nasza flota</h2>
 							<img class="obraz" src="../icons/tt-squad.png">
 							<p>
-								Zakładając, że Postać nie zakończyła swojego życia, będzie chciała jak najszybciej wrócić na ulicę. Aby rozpocząć proces naturalnego leczenia, stan Postaci musi zostać wcześniej ustabilizowany. 
+								Załoga Ambulansu Trauma Team składa się z pięciu członków: Lekarza, Asytenta medycznego, Pilota i dwóch Oficerów Ochrony. Sam ambulans to opancerzona AV-4 uzbrojona w Tsunami Arms Helix.
 							</p>							
+						</div>
+					</section>
+					<div class="tt-bookmark">
+						<div class="tt-bookmark-label">
+							<span>OPIEKA</span>
+						</div>
+					</div>
+					<section class="tt-section">
+						<div class="tt-section-header">
+							<h2>Szpital</h2>
+							<p>
+								Na przestrzeni ostatnich lat przełomy w medycynie doprowadziły do znaczącego obniżenia kosztów i czasu trwania leczenia. Kiedy Postać jest przyjmowana w szpitalu zostaje wyleczona ze wszystkich urazów. Koszt leczenia zależny jest od wartości DV najpoważniejszego urazu.  
+							</p>						
+						</div>
+						<div class="tt-section-table-container">
+							<table >
+								<thead>
+									<tr>
+										<th class="header-cell">DV</th>
+										<th class="header-cell">Koszt</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="secondary-cell">DV17 lub więcej</td>
+										<td class="secondary-cell">1000 €$</td>
+									</tr>
+									<tr>
+										<td class="secondary-cell">DV15</td>
+										<td class="secondary-cell">500 €$</td>
+									</tr>
+									<tr>
+										<td class="secondary-cell">DV13</td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="secondary-cell">DV10</td>
+										<td class="secondary-cell">50 €$</td>
+									</tr>						
+								</tbody>
+							</table>
+						</div>
+						<div class="tt-section-header">
+							<h2>Bodybank</h2>
+							<p>
+								Na początku wieku opracowano w Biotechnice sposób na klonowanie tkanek. W czasie Czwartej Wojny Korporacyjnej upadł biznes sprzedaży i przemytu organów na czarnym rynku przez co, <b>po raz pierwszy w historii pozyskiwania organów, ludzie stali się mniej warci martwi niż żywi </b>. Z tego powodu koszt wymiany mięsnej części ciała jest wpisany w cenę leczenia. Jest możliwość wymiany na swoją, ale najpierw musi zostać wyhodowana, a przechowywanie kosztuje 50 €$ za każdą przechowywana część ciała. 
+							</p>
+							<h2>Wszczepy z ulicy</h2>
+							<p>
+								Wszczepy odzyskane z osób, które już ich nie będą używać, mają wartość odsprzedaży pod warunkiem, że zostały pozyskane w odpowiedni sposób. Tylko Medtech jest w stanie pozyskać wszczepy bez uszkodzenia ich. Jednakże uszkodzone wszczepy można naprawić używając umiejętności Cybertech. DV dla obu jest równe DV instalacji wsczepów i zajmuje to 4h. Przy nieudanej naprawie wszczep zostaje zniszczony i zabiera to 2h.
+							</p>
+							<p class="tt-section-subtitle">
+								Postać nie może sama sobie instalować wszczepów, chyba, że dostępność instalacji jest na poziomie Galerii handlowej.
+							</p>
+						</div>
+						<div class="tt-section-table-container">
+							<table >
+								<thead>
+									<tr>
+										<th class="header-cell">Dostępność </th>
+										<th class="header-cell">DV</th>
+										<th class="header-cell">Koszt </th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="secondary-cell">Galeria handlowa</td>
+										<td class="secondary-cell">DV13</td>
+										<td class="secondary-cell">100 €$</td>
+									</tr>
+									<tr>
+										<td class="secondary-cell">Przychodnia</td>
+										<td class="secondary-cell">DV15</td>
+										<td class="secondary-cell">500 €$</td>
+									</tr>
+									<tr>
+										<td class="secondary-cell">Szpital</td>
+										<td class="secondary-cell">DV17</td>
+										<td class="secondary-cell">1000 €$</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="tt-section-header">
+							<h2>Bodysculpting</h2>
+							<p>
+								Bodysculpting to proces zmiany swojego wyglądu poprzez wszczepy. Nie powoduje utraty człowieczeństwa i na pierwszy rzut oka nie można odróżnić osoby, która poddała się takim zabiegom od naturalnie uformowanej osoby.  
+							</p>
+							<p>
+								Egzotyczny bodysculpting sprawia, że wygląda się nieziemsko z tą różnicą, że "nieziemsko" oznacza "jak z innej plamnety". Można sobie przyczepić kocie wąsy, tygrysie pazury, koputa, czółki, futro, płetwy, macki i cokolwiek sobie dusza zapragnie. Takie zabiegi jednakże powodują utratę człowieczeństwa w jednostce im poddanej. 
+							</p>
+							<p>
+								Postać nie może przeprowadzić sama na sobie zabiegu bodysculptingu, jednakże utalentowany Medtech może przeprowadzić go na pacjencie. Procedura zajmuje 4h. W przypadku niepowodzenia materiały są niszczone i całość zajmuje 2h.
+							</p>
+						</div>
+						<div class="tt-section-table-container">
+							<table >
+								<thead>
+									<tr>
+										<th class="header-cell">Bodysculpting</th>
+										<th class="header-cell">Dostępność</th>
+										<th class="header-cell">Koszt</th>
+										<th class="header-cell">Utrata człowieczeństwa </th>
+										<th class="header-cell">DV </th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">Standard</td>
+										<td class="secondary-cell">Przychodnia</td>
+										<td class="secondary-cell">500 €$</td>
+										<td class="secondary-cell">---</td>
+										<td class="secondary-cell">DV15: Materiały za 500 €$</td>
+									</tr>
+									<tr>
+										<td class="main-cell">Exotic</td>
+										<td class="secondary-cell">Szpital</td>
+										<td class="secondary-cell">1000 €$</td>
+										<td class="secondary-cell">4d6</td>
+										<td class="secondary-cell">DV17: Materiały za 500 €$</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="tt-section-header">
+							<h2>Narkotyki</h2>
+							<p>
+								Zażycie narkotyków wymaga Akcji. Jeżeli cel nie chce ich zażyć wymagany jest Atak Wręcz w celu determinacji, czy cel je zażyje.  
+							</p>
+							<p>
+								<b>Zaraz po zażyciu dawki na Postać wpływa podstawowy efekt narkotyku. Kiedy podstawowy efekt się skończy Postać musi zmierzyć się z efektem dodatkowym poprzez rzut WILL + Resist Torture/Drugs + 1d10. Efekty dodatkowe są trwałe i wymagają terapii, żeby ich się pozbyć. </b>Zażywanie kilku dawek zwielokrotnia długosć działania podstawowego efektu.
+							</p>
+						</div>
+						<div class="tt-section-table-container">
+							<table >
+								<thead>
+									<tr>
+										<th class="header-cell">Nazwa</th>
+										<th class="header-cell">Koszt dawki</th>
+										<th class="header-cell">Podstawowy efekt</th>
+										<th class="header-cell">Dodatkowy efekt</th>
+										<th class="header-cell">DV</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td class="main-cell">Black Lace</td>
+										<td class="secondary-cell">50€$</td>
+										<td class="secondary-cell">Czas działania: 24h. 2d6 HL (po skończeniu efektu Postać odzyskuje HL). Postać ignoruje efekt Poważnych Obrażeń</td>
+										<td class="secondary-cell">HL nie jest odzyskiwane. Postać uzależnia się. -2 do REF jeżeli postać nie jest pod wpływem podstawowego efektu.</td>
+										<td class="secondary-cell">DV17</td>
+									</tr>
+									<tr>
+										<td class="main-cell">Blue Glass</td>
+										<td class="secondary-cell">20€$</td>
+										<td class="secondary-cell">Czas działania: 4h. Co jakiś czas postać doznaje silnych halucynacji (zależne od GM), postać traci możliwość wykonania Akcji.</td>
+										<td class="secondary-cell">Postać uzależnia się. Halucynacje występują mniej więcej raz na godzinę. Podczas trwania podstawowego efektu, halucynacje nie występują.</td>
+										<td class="secondary-cell">DV15</td>
+									</tr>
+									<tr>
+										<td class="main-cell">Boost</td>
+										<td class="secondary-cell">50€$</td>
+										<td class="secondary-cell">Czas działania: 24h. +2 do INT.</td>
+										<td class="secondary-cell">Postać uzależnia się. Stałe -2 do INT.</td>
+										<td class="secondary-cell">DV17</td>
+									</tr>
+									<tr>
+										<td class="main-cell">Smash</td>
+										<td class="secondary-cell">10€$</td>
+										<td class="secondary-cell">Czas działania: 4h. +2 do Tańca, Akrobatyki, Rozmowy, Percepcji, Perswazji i Aktorstwa.</td>
+										<td class="secondary-cell">Postać uzależnia się. -2 do Tańca, Akrobatyki, Rozmowy, Percepcji, Perswazji i Aktorstwa. Okazjonalne potrzeby niszczenia.</td>
+										<td class="secondary-cell">DV15</td>
+									</tr>
+									<tr>
+										<td class="main-cell">Synthcoke</td>
+										<td class="secondary-cell">20€$</td>
+										<td class="secondary-cell">Czas działania: 4h. +1 do REF. Okazjonalne napady paranoi.</td>
+										<td class="secondary-cell">Postać uzależnia się. -2 do REF jeżeli postać nie jest pod wpływem podstawowego efektu. Okazjonalne napady paranoi.</td>
+										<td class="secondary-cell">DV15</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="tt-section-header">
+							<h2>Terapia</h2>
+							<p>
+								  
+							</p>
+							<p>
+								
+							</p>
 						</div>
 					</section>
 					<div class="tt-bookmark">
