--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<img src="" alt="Kolektyw Bartmossa">
 						<span>KOLEKTYW BARTMOSSA</span>
 					</a>
-					<a href="pages/news-54.html"  class="app-icon" data-app="news-54">
+					<a href="pages/nightcity-today.html"  class="app-icon" data-app="news-54">
 						<img src="" alt="Night City Today">
 						<span>NIGHT CITY TODAY</span>
 					</a>
