--- a/pages/arasaka.html
+++ b/pages/arasaka.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title> Strona Główna - Night City</title>
+		<title>Arasaka</title>
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-		<link rel="stylesheet" type="text/css" href="nightcity-style.css">
+		<link rel="stylesheet" type="text/css" href="arasaka-style.css">
 	</head>
 	<body>
 		<div class="container">
@@ -18,7 +18,7 @@
 				<div class="address-bar">
 					<a href="../index.html" class="home-button"><i class="fas fa-home"></i> KEYSTONE</a>
 					<span class="separator"> </span>
-					<span class="path">NETDIR://NCITY.GOV</span>
+					<span class="path">NETDIR://ARASAKA.CORP</span>
 					<span class="powered-by">POWERED BY NETWATCH</span>
 				</div>
 			</div>
